--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,14 @@
     padding: 20px;
 }
 
-.DiaryEditor input, textarea {
+.DiaryEditor input,
+textarea {
     margin-bottom: 20px;
     width: 500px;
     padding: 10px;
 }
 
-.DiaryEditor textarea{
+.DiaryEditor textarea {
     height: 150px;
 }
 
@@ -24,4 +25,38 @@
     width: 500px;
     padding: 10px;
     cursor: pointer;
+}
+
+/* DiaryList */
+.DiaryList {
+    border: 1px solid gray;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.DiaryList h2 {
+    text-align: center;
+}
+
+/* DiaryItem */
+.DiaryItem {
+    background-color: rgb(240, 240, 240);
+    margin-bottom: 10px;
+    padding: 20px;
+}
+
+.DiaryItem .info {
+    border-bottom: 1px solid gray;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.DiaryItem .date {
+    color: gray;
+}
+
+.DiaryItem .content {
+    font-weight: bold;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
